--- a/starter/layouts/main.html
+++ b/starter/layouts/main.html
@@ -6,20 +6,7 @@
   <meta name="color-scheme" content="light dark">
   <meta name="supported-color-schemes" content="light dark">
   <style>
-    @import "tailwindcss/theme";
-    @import "tailwindcss/utilities";
-
-    @config "./tailwind.config.js";
-
-    @variant hover (&:hover);
-
-    @theme {
-      --breakpoint-sm: 599px;
-    }
-
-    img {
-      @apply max-w-full align-middle;
-    }
+    @import "./tailwind.css";
   </style>
 </head>
 <body class="m-0 p-0 w-full [word-break:break-word] [-webkit-font-smoothing:antialiased] {{ page.bodyClass || '' }}">
